<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/collecton_people_include"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_below="@+id/infocollection_ll2"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:background="@xml/mainview_head_bg"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collection_person_info"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/people_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@xml/infocollection_people_et_shape"
                android:gravity="center"
                android:hint="@string/Please_enter_people_name"
                android:padding="3dp"
                android:textSize="14sp"
                tools:ignore="Autofill" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/people_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@xml/infocollection_people_et_shape"
                android:gravity="center"
                android:hint="@string/Please_select_people_sex"
                android:padding="3dp"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/jiantou_xia_icon" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nationality"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/people_nationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@xml/infocollection_people_et_shape"
                android:gravity="center"
                android:hint="@string/Please_select_people_nationality"
                android:padding="3dp"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/jiantou_xia_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/native_place"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/people_native_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@xml/infocollection_people_et_shape"
                android:gravity="center"
                android:hint="@string/Please_enter_people_native_place"
                android:padding="3dp"
                android:textSize="14sp"
                tools:ignore="Autofill" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nation"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/people_nation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@xml/infocollection_people_et_shape"
                android:gravity="center"
                android:hint="@string/Please_select_people_nation"
                android:padding="3dp"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/jiantou_xia_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/race"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/people_race"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@xml/infocollection_people_et_shape"
                android:gravity="center"
                android:hint="@string/Please_select_people_race"
                android:padding="3dp"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/jiantou_xia_icon" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/people_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/Please_select_people_type"
            android:background="@xml/infocollection_people_et_shape"
            android:gravity="center"
            android:padding="3dp"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/jiantou_xia_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_type"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/people_id_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/Please_select_people_id_type"
            android:background="@xml/infocollection_people_et_shape"
            android:gravity="center"
            android:padding="3dp"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/jiantou_xia_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_number"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/people_id_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@xml/infocollection_people_et_shape"
            android:gravity="center"
            android:hint="@string/Please_enter_id_number"
            android:inputType="number"
            android:padding="3dp"
            android:textSize="14sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/people_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@xml/infocollection_people_et_shape"
            android:gravity="center"
            android:hint="@string/Please_select_date_of_birth"
            android:padding="3dp"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_koseki"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/people_koseki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@xml/infocollection_people_et_shape"
            android:gravity="center"
            android:hint="@string/Please_enter_people_koseki"
            android:padding="3dp"
            android:textSize="14sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_information"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/people_contact_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@xml/infocollection_people_et_shape"
            android:gravity="center"
            android:hint="@string/Please_enter_your_contact_information"
            android:inputType="number"
            android:padding="3dp"
            android:textSize="14sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_address"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/people_contact_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@xml/infocollection_people_et_shape"
            android:gravity="center"
            android:hint="@string/Please_select_contact_addr"
            android:padding="3dp"
            android:textSize="14sp"
            app:drawableEndCompat="@xml/map_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/residential_address"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/people_residential_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@xml/infocollection_people_et_shape"
            android:gravity="center"
            android:hint="@string/Please_select_residential_address"
            android:padding="3dp"
            android:textSize="14sp"
            app:drawableEndCompat="@xml/map_icon" />

    </LinearLayout>
</LinearLayout>
