<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/collecton_vehicle_include"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/infocollection_ll2"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:background="@xml/mainview_head_bg"
    android:orientation="vertical"
    android:padding="5dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/collecton_vehicle_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collection_vehicle_info"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/collecton_vehicle_ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/collecton_vehicle_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/license_plate_number"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <com.hg.lib.view.LicensePlateView
            android:id="@+id/license_plate_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp" />

        <!--
                <EditText
                    android:id="@+id/license_plate_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@xml/infocollection_people_et_shape"
                    android:gravity="center"
                    android:hint="@string/Please_select_license_plate_number"
                    android:inputType="number"
                    android:padding="3dp"
                    android:textSize="14sp"
                    tools:ignore="Autofill" />-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collecton_vehicle_ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/collecton_vehicle_ll1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_owner_name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/vehicle_owner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@xml/infocollection_people_et_shape"
            android:gravity="center"
            android:hint="@string/Please_enter_vehicle_owner_name"
            android:inputType="number"
            android:padding="3dp"
            android:textSize="14sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/collecton_vehicle_ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/collecton_vehicle_ll2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_type"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/vehicle_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@xml/infocollection_people_et_shape"
            android:gravity="center"
            android:hint="@string/Please_select_vehicle_type"
            android:padding="3dp"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/jiantou_xia_icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/collecton_vehicle_ll4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/collecton_vehicle_ll3"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_color"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/vehicle_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@xml/infocollection_people_et_shape"
            android:gravity="center"
            android:hint="@string/Please_select_vehicle_color"
            android:padding="3dp"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/jiantou_xia_icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/collecton_vehicle_ll5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/collecton_vehicle_ll4"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_plate_type"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/license_plate_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@xml/infocollection_people_et_shape"
            android:gravity="center"
            android:hint="@string/Please_select_license_plate_type"
            android:padding="3dp"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/jiantou_xia_icon" />

    </LinearLayout>
</RelativeLayout>
