<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_img">

    <TextView
        android:id="@+id/login_appname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@color/c4967E3"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/login_username_et"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_appname_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@xml/login_et_bg"
        android:drawableStart="@xml/username_icon"
        android:digits="@string/digits"
        android:hint="@string/username_et_hint"
        android:inputType="none"
        android:padding="5dp"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_username_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@xml/login_et_bg"
        android:drawableStart="@xml/password_icon"
        android:hint="@string/password_et_hint"
        android:inputType="textPassword"
        android:padding="5dp"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <Button
        android:id="@+id/login_but"
        android:layout_width="250dp"
        android:layout_height="35sp"
        android:layout_below="@+id/login_password_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@xml/login_but_bg"
        android:text="@string/login_str"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_but"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_cityname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/A5A4AB"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technical_support"
            android:textColor="@color/A5A4AB"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>
</RelativeLayout>
